# spa

./: .clang-format  .clang-tidy-c  CMakeLists.txt  CMakePresets.json  Makefile  README.md  azi.c  daglengte.sh  findnoon.sh  libmyazi.c  libmyazi.h  spa.c
inc/: libmyazi.h  parseutil.h
src/: azi.c  libmyazi.c  noon.c  parseutil.c  sun.c
tests/: CMakeLists.txt  expected_testnoon.txt
